--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     height: 100%;
     color: whitesmoke;
     background-color: #111;
-    font-family: fantasy;
+    font-family: fantasy, Arial;
     background-attachment: fixed; 
     background-size: cover;
     overflow-x: hidden;
@@ -17,13 +17,22 @@ body {
 }
 
 h1 {
+    font-style: normal;
+    font-weight: lighter;
     margin: auto;
     text-align: center;
     animation: 10s alternating_shadow_warm infinite linear;
 }
 
 h2 {
+    font-style: normal;
+    font-weight: lighter;
     margin: 5%;
+}
+
+h3 {
+    font-style: normal;
+    font-weight: lighter;
 }
 
 a {
@@ -62,12 +71,14 @@ a {
     width: 150%;
     animation: 15s translate_svg_reverse infinite linear;
     position: absolute;
-    z-index: 10;
+    z-index: 0;
     transition-timing-function: ease-in-out;
+    opacity: 1;
 }
 
 .unblur_content {
     filter: blur(0);
+
 }
 
 .blur_content {
@@ -231,15 +242,15 @@ a {
     }
     25% { 
         transform: translate(-350px); 
-        opacity: 0.8;
+        opacity: 1;
     }
     50% { 
         transform: translate(-300px); 
-        opacity: 0.6;
+        opacity: 0.8;
     }
     75% { 
         transform: translate(-250px); 
-        opacity: 0.8;
+        opacity: 1;
     }
     100% { 
         transform: translate(-200px); 
@@ -254,15 +265,15 @@ a {
     }
     25% { 
         transform: translate(-200px, 450px); 
-        opacity: 0.8;
+        opacity: 1;
     }
     50% { 
         transform: translate(-250px, 450px); 
-        opacity: 0.6;
+        opacity: 0.8;
     }
     75% { 
         transform: translate(-300px, 450px); 
-        opacity: 0.8;
+        opacity: 1;
     }
     100% { 
         transform: translate(-350px, 450px); 
@@ -334,6 +345,7 @@ a {
     }
     #background_svg_container_foreground {
         width: 200%;
+        z-index: 0;
     }
     #page_container {
         width: 100%;
